[gd_scene load_steps=35 format=2]

[ext_resource path="res://Player/Pawn/Pawn.gd" type="Script" id=1]
[ext_resource path="res://Player/Pawn/P1Images/p1_walk04.png" type="Texture" id=2]
[ext_resource path="res://Player/Pawn/P1Images/p1_walk03.png" type="Texture" id=3]
[ext_resource path="res://Player/Pawn/P1Images/p1_walk05.png" type="Texture" id=4]
[ext_resource path="res://Player/Pawn/P1Images/p1_walk07.png" type="Texture" id=5]
[ext_resource path="res://Player/Pawn/P1Images/p1_walk09.png" type="Texture" id=6]
[ext_resource path="res://Player/Pawn/P1Images/p1_walk06.png" type="Texture" id=7]
[ext_resource path="res://Player/Pawn/P1Images/p1_walk02.png" type="Texture" id=8]
[ext_resource path="res://Player/Pawn/P1Images/p1_stand.png" type="Texture" id=9]
[ext_resource path="res://Player/Pawn/P1Images/p1_walk01.png" type="Texture" id=10]
[ext_resource path="res://Player/Pawn/P1Images/p1_walk10.png" type="Texture" id=11]
[ext_resource path="res://Player/Pawn/P1Images/p1_walk11.png" type="Texture" id=12]
[ext_resource path="res://Player/Pawn/P1Images/p1_walk08.png" type="Texture" id=13]
[ext_resource path="res://Player/Pawn/player_collision_shape.tres" type="Shape2D" id=14]
[ext_resource path="res://Player/Pawn/P1Images/p1_jump.png" type="Texture" id=15]
[ext_resource path="res://Player/Pawn/P1Images/p1_duck.png" type="Texture" id=16]
[ext_resource path="res://Player/Pawn/P1Images/p1_hurt.png" type="Texture" id=17]
[ext_resource path="res://Player/Pawn/P2Images/p3_walk06.png" type="Texture" id=18]
[ext_resource path="res://Player/Pawn/P2Images/p3_walk07.png" type="Texture" id=19]
[ext_resource path="res://Player/Pawn/P2Images/p3_walk11.png" type="Texture" id=20]
[ext_resource path="res://Player/Pawn/P2Images/p3_walk09.png" type="Texture" id=21]
[ext_resource path="res://Player/Pawn/P2Images/p3_walk05.png" type="Texture" id=22]
[ext_resource path="res://Player/Pawn/P2Images/p3_walk04.png" type="Texture" id=23]
[ext_resource path="res://Player/Pawn/P2Images/p3_jump.png" type="Texture" id=24]
[ext_resource path="res://Player/Pawn/P2Images/p3_walk02.png" type="Texture" id=25]
[ext_resource path="res://Player/Pawn/P2Images/p3_walk03.png" type="Texture" id=26]
[ext_resource path="res://Player/Pawn/P2Images/p3_walk01.png" type="Texture" id=27]
[ext_resource path="res://Player/Pawn/P2Images/p3_walk08.png" type="Texture" id=28]
[ext_resource path="res://Player/Pawn/P2Images/p3_stand.png" type="Texture" id=29]
[ext_resource path="res://Player/Pawn/P2Images/p3_walk10.png" type="Texture" id=30]
[ext_resource path="res://Player/Pawn/P2Images/p3_duck.png" type="Texture" id=31]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 8 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 13 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "duck",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 29 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 28 ), ExtResource( 21 ), ExtResource( 30 ), ExtResource( 20 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 31 ) ],
"loop": true,
"name": "duck",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/path = NodePath("P1AnimatedSprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 2.2974, 2.21914 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -100 ), Vector2( 0, 800 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("P1AnimatedSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.3, 1.3 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("P1AnimatedSprite")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "hurt", false ],
"method": "play"
} ]
}

[node name="Pawn" type="KinematicBody2D" groups=["players"]]
collision_layer = 2
script = ExtResource( 1 )

[node name="P1AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -46 )
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="P2AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -46 )
frames = SubResource( 3 )
animation = "duck"

[node name="StandingCollision" type="CollisionShape2D" parent="."]
position = Vector2( -2, -46.25 )
shape = ExtResource( 14 )

[node name="ProjectileLaunchPoint" type="Node2D" parent="."]
position = Vector2( 0, -31 )

[node name="DamageableArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageableArea"]
position = Vector2( -2, -46.25 )
shape = ExtResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dead = SubResource( 2 )

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
__meta__ = {
"_editor_description_": "For use when respawning"
}

[connection signal="body_entered" from="DamageableArea" to="." method="_on_DamageableArea_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
